--- a/ms-user/src/main/resources/application.properties
+++ b/ms-user/src/main/resources/application.properties
@@ -14,5 +14,5 @@ spring.sql.init.mode=always
 
 server.port = 8080
 
-spring.security.user.name = root
-spring.security.user.password = root
+#spring.security.user.name = root
+#spring.security.user.password = root
