--- a/ms-user/src/main/resources/application.properties
+++ b/ms-user/src/main/resources/application.properties
@@ -16,3 +16,6 @@ server.port = 8080
 
 #spring.security.user.name = root
 #spring.security.user.password = root
+
+
+api.security.token.secret=${JWT_SECRET:my-secret-key}
